--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
         window.onload = updateVlmData;
     </script>
    <footer>
-       <p>&copy; STLIN256</p>
+       <p>&copy; <a href="https://github.com/stlin256/VLM_Live" target="_blank">STLIN256</a></p>
    </footer>
 </body>
 </html>
